# rust-middleware

./: Cargo.toml  README.md  setup.sh
bs3/: Cargo.toml
bs3/app-js/: package-lock.json  package.json  tsconfig.json
bs3/app-js/src/: bs3-route-fallback.ts  bs3-route.ts  bs3-routes.ts  index.ts
bs3/app-js/src/machines/: app.ts  listViewMachine.ts  unknownViewMachine.ts
bs3/app-js/src/utils/: nav-utils.ts
bs3/fixtures/: index.html
bs3/fixtures/alt/: index2.html
bs3/fixtures/css/: style.css
bs3/src/: lib.rs  main.rs  msg.rs  multi.rs  multi_service.rs  options.rs  path_buf.rs  read_response_body.rs  resp_mod.rs  serve_static.rs  serve_static_config.rs  server.rs
bs3/src/client/: html.rs  mod.rs  runtime.rs  script.rs
fixtures/: other.html
node/: .gitignore  Cargo.toml  index.html  package.json
node/src/: lib.rs
node/test/: api.js  init.js
src/: main.rs  read_response_body.rs
