[package]
name = "bs3"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bs3"
path = "src/main.rs"

[lib]
name = "bs3_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
derive_more = "0.99.17"
percent-encoding = "2.1.0"
actix-web = "4"
actix-files = "0.6.0"
actix-rt = "2.7.0"
actix-utils = "3.0.0"
env_logger = "0.9"
futures = "0.3.21"
futures-util = { version = "0.3.21" }
log = "0.4"
pin-project = "1"
bytes = "1.1.0"
anyhow = "1.0.56"
serde = { version = "1.0.136" , features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["sync", "rt-multi-thread", "macros"] }
