[package]
name = "cpu-count"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs3 = { version = "1.0.0", path = "../bs3" }
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
once_cell = "1.10.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]
